# brightcove_async

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  README.md  openapi.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  package-publish.yml  release.yml
brightcove_open_api_specs/: analytics.yaml  audience_openapi.yaml  configuration-openapi.yaml  dynamic_ingest.yaml
src/brightcove_async/: __init__.py  client.py  exceptions.py  initalise.py  initialise.py  protocols.py  registry.py  settings.py
src/brightcove_async/oauth/: oauth.py
src/brightcove_async/schemas/: __init__.py  analytics_model.py  audience_model.py  ingest_profiles_model.py  params.py  syndication_model.py
src/brightcove_async/services/: __init__.py  analytics.py  audience.py  base.py  cms.py  dynamic_ingest.py  ingest_profiles.py  (+1 more)
tests/: conftest.py  test_analytics_service.py  test_architecture.py  test_audience_service.py  test_base_service.py  test_client.py  test_cms_service.py  test_dynamic_ingest_service.py  test_exceptions.py  test_ingest_profiles_service.py  test_initialise.py  test_oauth.py  test_params.py  test_protocols.py  test_registry.py  test_schemas.py  test_settings.py  test_syndication_service.py
tests/mock_responses/: create_video_response.json  create_video_variant.json  get_all_video_variants_response.json  get_digital_master_response.json  get_playlists_for_video_response.json  get_video_audio_tracks_response.json  get_video_count_response.json  get_video_images.json  get_video_sources_response.json  get_videos_response.json
(+5 files in other folders)
