[project]
name = "brightcove_async"
version = "0.1.8"
description = "An asynchronous client for the Brightcove API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "aiolimiter>=1.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.1.2",
    "tool>=0.8.0",
    "ty>=0.0.18",
]

[tool.setuptools.package-data]
"brightcove_async" = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.31.2",
    "ty>=0.0.18",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["brightcove_async"]

[tool.ty.src]
root = "src"

[tool.uv]
package = true
